--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./artifact_downloads
-./wa_telco_customer_churn_test_data
-./wa_telco_customer_churn_train_data
+/artifact_downloads
+/wa_telco_customer_churn_test_data
+/wa_telco_customer_churn_train_data
