--- a/conda_env.yml
+++ b/conda_env.yml
@@ -9,19 +9,24 @@ dependencies:
   # The python interpreter version.
   # Currently Azure ML only supports 3.8 and later.
 - python=3.8.17
-
 - pip:
+# Azure ML dependencies
+  - azure-ai-ml
+  - azure-identity
   - azureml-train-automl-runtime==1.52.0
   - inference-schema
   - azureml-interpret==1.52.0
   - azureml-defaults==1.52.0
-- numpy==1.22.3
-- pandas==1.1.5
-- scikit-learn==0.22.1
-- py-xgboost==1.3.3
-- fbprophet==0.7.1
-- holidays==0.10.3
-- psutil==5.9.5
+
+  # Other dependencies
+  - numpy==1.22.3
+  - pandas==1.1.5
+  - scikit-learn==0.22.1
+  - py-xgboost==1.3.3
+  - fbprophet==0.7.1
+  - holidays==0.10.3
+  - psutil==5.9.5
+
 channels:
 - anaconda
 - conda-forge
