--- a/scoring-pipeline/endpoint.yml
+++ b/scoring-pipeline/endpoint.yml
@@ -1,4 +1,4 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineEndpoint.schema.json
 name: wa-customer-churn-prediction2 #setup replace `mlops-workshop-endpoint` with your own endpoint name. It has to be globally unique
 auth_mode: key
-public_network_access: disabled
+#public_network_access: disabled
